<resources>
    <string name="app_name">Aptitude Master</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">UserID</string>
    <string name="nav_header_subtitle">Name</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>

    <string name="menu_tutorial">Tutorial</string>
    <string name="menu_quiz">Quiz</string>
    <string name="menu_leaderboard">LeaderBoard</string>
    <string name="menu_changepin">ChangePin</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Contact Us</string>
</resources>
