<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tutorial"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_tutorial" />
        <item
            android:id="@+id/nav_quiz"
            android:icon="@drawable/ic_menu_quiz"
            android:title="@string/menu_quiz" />

        <item
            android:id="@+id/nav_leaderboard"
            android:icon="@drawable/menu_leaderboard"
            android:title="@string/menu_leaderboard" />
        <item
            android:id="@+id/nav_changepin"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_changepin" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
